<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ddm.com.br.ddm_consulta_produto.MainActivity">
    <item
        android:id="@+id/menu_atualiza_produtos"
        android:orderInCategory="100"
        android:title="@string/menu_atualiza_produtos"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_configuracao"
        android:orderInCategory="100"
        android:title="@string/menu_configuracao"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sobre"
        android:orderInCategory="100"
        android:title="@string/menu_sobre"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sair"
        android:orderInCategory="100"
        android:title="@string/menu_sair"
        app:showAsAction="never" />
</menu>
